# write_fort20

./: .gitignore  README.md  pyproject.toml  setup.py
src/write_fort20/: adcutils.py  fort14parse.py  fort20write.py  test.py
tests/: test.py  test_write20.py
write_fort20/: fort14parse.py  fort20write.py  shukai_gauges.py
