[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "write_fort20"
version = "0.0.1"
authors = [
  { name="Matthew Scarborough" },
  { name="Mark Loveland" },
  { name="Chayanon Wichitrnithed" }
]
description = "A command line program to write ADCIRC fort.20 file"
#readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

